src/test/ui/pattern/bindings-after-at/bind-by-move-no-subbindings-fun-param.stderr
error[E0382]: use of moved value
  --> $DIR/bind-by-move-no-subbindings-fun-param.rs:9:12
   |
LL | fn f(a @ A(u): A) -> Box<u8> {
   |      ------^-
   |      |     |
   |      |     value used here after move
   |      value moved here
   |      move occurs because value has type `A`, which does not implement the `Copy` trait

error: aborting due to previous error

For more information about this error, try `rustc --explain E0382`.
